# coding-platform-backend

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1cce7155f3c5_update_user_table.py  394e52ba6121_create_user_table.py  3ee6165e9f37_add_function_name_to_problems_and_.py  5a2e560e064d_add_language_test_cases_user_stats_and_.py  6fd417f75ec6_description_of_changes.py  a4fc4ce531d0_create_problem_system_tables.py  b1549a2c8c7f_add_profile_and_stats_fields_to_user.py  ba81b115117e_add_refresh_token_column.py  ca9d48032795_align_user_solved_and_submission_.py  e4b30a1bddd6_add_refresh_token_hash_column.py
app/: main.py
app/api/: api_router.py  deps.py
app/api/routes/: auth.py  problem.py  (+2 more)
app/cache/: __init__.py  redis.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  category.py  difficulty.py  language.py  problem.py  problem_template.py  submission.py  test_case.py  user.py  user_solved_problem.py  user_stats.py
app/schemas/: __init__.py  auth.py  language.py  problem.py  problem_template.py  submission.py  test_case.py  user.py  user_stats.py
app/services/: auth.py  judge_queue.py  judge_sender.py  problem_service.py  submission_service.py  token_service.py
socialcode_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_judge_worker.py  test_problem_routes.py  test_problem_service.py  test_submission_routes.py
worker/: __init__.py  config.py  drivers.py  executor.py  judge_worker.py
worker/scripts/: __init__.py  python_batch_runner.py
